JIRA-5555 adding unit testing more info added to readme